<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paintbackground"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/paint_estimator_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="281dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/enter_dimensions_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/computeGallonsButton"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="3"
        android:text="@string/compute_gallons_button"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout3"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="106dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:onClick="helpMenu"
        android:text="@string/help_button"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout3"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="254dp"
        android:layout_height="142dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lengthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_text" />

            <EditText
                android:id="@+id/lengthValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/length_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/widthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/width_text" />

            <EditText
                android:id="@+id/widthValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/width_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_text" />

            <EditText
                android:id="@+id/heightValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/height_value" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="260dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/doorsWindowText"
        app:layout_constraintStart_toStartOf="@+id/doorsWindowText"
        app:layout_constraintTop_toBottomOf="@+id/doorsWindowText">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/doorsText"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:text="@string/doors_text" />

            <EditText
                android:id="@+id/doorsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/doors_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/windowsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windows_text" />

            <EditText
                android:id="@+id/windowsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/windows_value" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="227dp"
        android:layout_height="81dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/helpButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/computeGallonsButton">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/interiorSurfaceAreaText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/interior_surface_area_text" />

            <TextView
                android:id="@+id/interiorSurfaceAreaValue"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/interior_surface_area_value" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gallonsNeededText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/gallons_needed_text" />

            <TextView
                android:id="@+id/gallonsNeededValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gallons_needed_value" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/doorsWindowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/doors_and_windows_text"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</android.support.constraint.ConstraintLayout>