<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/paintbackground"
    tools:context=".HelpActivity">

    <Button
        android:id="@+id/inputRoomDimensionsButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:onClick="closeActivity"
        android:text="@string/input_room_dimensions_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/estimatedPaintText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/estimated_paint_required_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/estimatedPaintValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/estimated_paint_value"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/estimatedPaintText"
        app:layout_constraintStart_toStartOf="@+id/estimatedPaintText"
        app:layout_constraintTop_toBottomOf="@+id/estimatedPaintText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="202dp"
        android:layout_height="423dp"
        android:layout_marginBottom="8dp"
        android:text="@string/help_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/inputRoomDimensionsButton"
        app:layout_constraintEnd_toEndOf="@+id/estimatedPaintText"
        app:layout_constraintStart_toStartOf="@+id/estimatedPaintText" />

</android.support.constraint.ConstraintLayout>